<resources>
    <string name="app_name">Fatec Chat</string>
    <string name="loading">Carregando...</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="sign_in">Login</string>
    <string name="go_to_sign_up">Você não tem conta? Registre-se</string>
    <string name="error_email_empty">Email é obrigatório</string>
    <string name="error_email_invalid">Entre com um email válido</string>
    <string name="error_password_invalid">A senha deve conter pelo menos 6 caracteres</string>
    <string name="error_password_empty">Senha obrigatória</string>

    <string name="auth_failed">Autenticação inválida</string>

    <string name="name">Nome</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="go_to_sign_in">Você tem conta? Login</string>
    <string name="sign_up">Registrar</string>

    <string name="error_name_empty">Nome é obrigatório</string>
    <string name="error_password_different">Senha diferente</string>

    <string name="message">Chat</string>
    <string name="friend">Amigos</string>
    <string name="request">Request</string>
    <string name="logout">Sair</string>

    <string name="navigation_drawer_open">Open NavigationView</string>
    <string name="navigation_drawer_close">Close NavigationView</string>
</resources>
